# honeypot-med

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  action.yml  app.py  docker-compose.yml  honeypot-med.spec  pyproject.toml  run.bat  run.ps1  run.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: attack-pack.yml  bug-report.yml  feature-request.yml
.github/workflows/: autopilot.yml  ci.yml  codeql.yml  container.yml  package.yml  pages.yml
docs/: MCP-SERVER.md  alerts.md  brand-assets.md  challenge-mode.md  distribution.md  integrations.md  public-surface.md  readiness.md  release-checklist.md  rollback.md  runbook.md  self-hosting.md  skill-integration.md  slo.md  studio.md  viral-product.md
examples/: baseline.json  clean.json  decoy-pack.json  replay-fixture.jsonl  replay-golden-report.json  sample.json
schemas/: event-v1.json
scripts/: render-og-card.sh
scripts/bootstrap/: install.ps1  install.sh
scripts/demo/: run-demo.sh
scripts/docker/: entrypoint.sh  healthcheck.py
scripts/package/: build-linux.sh  build-macos.sh  (+2 more)
site/: 404.html  index.html  launch-kit.json  llms.txt  robots.txt  site.webmanifest  sitemap.xml
tests/: test_baseline.py  test_cli.py  test_decoys.py  test_events.py  test_html_quality.py  test_launch.py  test_launchkit_surface.py  test_redaction.py  test_release_manifest.py  test_runtime.py  test_server.py  test_service.py  test_site_surface.py  test_smoke.py  test_store.py  test_studio.py
(+138 files in other folders)
