[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honeypot-med"
version = "0.4.1"
description = "Prompt-injection honeypot capture and evidence-backed risk analysis for healthcare AI workflows"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "ByteWorthy LLC"}]
keywords = [
  "prompt-injection",
  "healthcare-ai",
  "security",
  "honeypot",
  "cli",
  "local-first"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]

[project.urls]
Homepage = "https://byteworthyllc.github.io/honeypot-med/"
Repository = "https://github.com/ByteWorthyLLC/honeypot-med"
Issues = "https://github.com/ByteWorthyLLC/honeypot-med/issues"
Releases = "https://byteworthyllc.github.io/honeypot-med/releases/"

[project.scripts]
honeypot-med = "honeypot_med.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
honeypot_med = ["packs/*.json", "static/*.jpg"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
